2007/03/?? 1.4.0:
 - Added API functions for retrieving User Message info without potentially crashing.
 - Added API functions for letting SourceMM plugins use Valve Server Plugin callbacks.
 - Changed version numbering to include the build number (SVN revision).
 - Fixed amb93 (improved mod path detection).
 - Fixed various rare string inconsistencies.

2006/11/29 1.3d:
 - Updated Metamod:Source to recognize the latest Source Engine version (ServerGameDLL006)

2006/09/06 1.3a:
 - Fixed a building issue on Linux which caused unresolved symbol errors when trying to
   load Metamod:Source on a game using an older set of engine libraries. This fix should
   now allow Metamod:Source to run with The Ship on Linux.

2006/08/16 1.3:
 - Added SourceHook support for functions that return references.
 - Added some extra information to the "meta game" command: Description and Interface. For
    example, CS:S would display "Counter-Strike: Source" and "ServerGameDLL004."
 - Added some extra functionality to ISmmPluginManager.
 - Added compiling support for MSVC 8.0 (Visual Studio 2005) and GCC 4.x
 - Added another API helper function for formatting and searching for interfaces.
 - Updated project files and source tree to use the latest HL2SDK.
 - Updated the sample plugins to be a bit cleaner and use newer API.
 - Fixed bug where Metamod:Source could load the wrong GameDLL and/or load more than one
    GameDLL. This issue occured in HL2 CTF, SourceForts, or any other mod that relied on
    files from another mod directory.
 - Fixed bug where ISmmAPI::MetaFactory() would return the wrong interface when trying to
    retrieve ISmmPluginManager.
 - Fixed bug where returning false in Load() after adding a Metamod event listener or
    hooking a function could cause a crash instead of rejecting the plugin.
 - Fixed bug where trying to load Metamod:Source a second time as a SourceMM or Valve
    server plugin could cause a crash.