@@ -1,6 +1,8 @@
-2007/03/?? 1.4.0:
+2007/04/?? 1.4.0:
  - Added API functions for retrieving User Message info without potentially crashing.
  - Added API functions for letting SourceMM plugins use Valve Server Plugin callbacks.
+ - Added plugin status to client version of "meta list" command. Previously, it did not
+   differentiate between running and paused plugins.
  - Changed version numbering to include the build number (SVN revision).
  - Fixed amb93 (improved mod path detection).
  - Fixed various rare string inconsistencies.
